<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5899a6"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Monday -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/partly_cloudy" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/mon"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/partly_cloudy"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="HardcodedText,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/_24c_31c"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <!-- Tuesday -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/shower" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/tue"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/showers"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/_24c_30c"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <!-- Wednesday -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/rain" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/wed"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/rainy"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/_22c_23c"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <!-- Wednesday -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="Thu"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="HardcodedText,RtlSymmetry" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/mostly_sunny"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/_28c_35c"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <!-- Wednesday -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/partly_cloudy" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/fri"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/cloudy"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="24C - 31C"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <!-- Wednesday -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/rain" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/sat"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="Rainy"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="22C - 23C"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>
    <!-- Wednesday -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/shower" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/sun"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/shower"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="24C - 30C"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>
    <!-- Wednesday -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/rain" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="Mon"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/mostly_rainy"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="22C - 23C"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>
    <!-- Wednesday -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/rain" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="Tue"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="Rainy"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="22C - 23C"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>
    <!-- Wednesday -->
    <!-- Wednesday -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="Wed"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="Sunny"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="28C - 35C"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/shower" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="Thu"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="Shower"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="22C - 23C"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <!-- Wednesday -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/rain" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="Fri"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="Mostly Rain"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="22C - 23C"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</LinearLayout>
